# NeuralVaultCore

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  install.py  mcp_config.example.json  nvc.py  pyproject.toml  server.py  webui.py
.claude/: settings.local.json
.github/workflows/: ci.yml
NVC-BaseUI/: index.html  package-lock.json  package.json  vite.config.ts
NVC-BaseUI/src/: App.tsx  index.css
NVC-BaseUI/src/components/: layout.tsx
NVC-BaseUI/src/components/ui/: button.tsx  input.tsx  textarea.tsx
NVC-BaseUI/src/lib/: api.ts
NVC-BaseUI/src/pages/: calendar.tsx  create.tsx  dashboard.tsx  export.tsx  import.tsx  memories.tsx  memory-detail.tsx  search.tsx
core/: __init__.py  auth.py  config.py  daemon.py  doctor.py  exceptions.py  importers.py  migration.py  models.py  repair.py  service.py  shell_capture.py  storage.py  summarizer.py  watcher.py
hooks/: bash_hook.sh  nvc-daemon.service  nvc-service.bat  powershell_hook.ps1  zsh_hook.sh
tests/: conftest.py  test_auth.py  test_cli.py  test_compact_output.py  test_config.py  test_daemon.py  test_doctor.py  test_importers.py  test_install.py  test_migration.py  test_models.py  test_repair.py  test_server.py  test_service.py  test_shell_capture.py  test_storage.py  test_summarizer.py  test_watcher.py  test_webui.py
