[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralvaultcore"
version = "1.0.0"
description = "Infinite Long-Term Memory for AI Agents"
authors = [{ name = "getobyte" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.9.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2.0",
    "watchdog>=3.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
nvc = "nvc:main"

[tool.setuptools.packages.find]
include = ["core*", "hooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]